fix(code-block): use contentvisibilityautostatechange event

--- a/elements/rh-code-block/rh-code-block.css
+++ b/elements/rh-code-block/rh-code-block.css
@@ -165,8 +165,6 @@
       var(--rh-color-green-40, #87bb62));
 
   display: grid;
-  content-visibility: auto;
-  contain-intrinsic-block-size: auto;
   place-items: center;
   grid-template-columns: auto min-content;
   grid-template-areas:
@@ -183,14 +181,16 @@
     var(--rh-code-block-border-block-start-width,
       var(--rh-border-width-sm, 1px));
 
+  /* Apply content-visibility here instead of on :host to allow tooltips to overflow */
+  content-visibility: auto;
+  contain-intrinsic-block-size: auto 193px;
+
   --_gradient:
     linear-gradient(var(--_gradient-angle, 0deg),
       var(--_code-background-color) 0%,
       transparent 100%);
 
   &:not(.line-numbers) {
-    content-visibility: auto;
-
     &:not(.isIntersecting) {
       content-visibility: visible;
     }
@@ -309,6 +309,7 @@
 
 #actions rh-tooltip {
   display: block;
+  z-index: 10000;
 }
 
 #expand {
